--- a/week-3/main-folder/block-vs-inline.html
+++ b/week-3/main-folder/block-vs-inline.html
@@ -11,6 +11,6 @@
         <p>Block level elements are displayed in a new line and they take 100% of the width.</p>
         <p>Anchor tag is an example of inline element - <a href="http://www.google.com">Click here</a> to get to the GOOGLE. Inline elements have their width defined by the width of the content they hold. They don't get displayed in a new line and they don't force any other elemnt to get display in a new line.</p>
         <p>Image tag is also an example of inline element. <img src="http://placehold.it/100x100" alt="placeholder"> This is not my last paragraph.</p>
-		<p>Inline elements should always be contained by a block level element</p>
+		<p>Inline elements should always be contained by a block level element.</p>
 	</body>
 </html>
