--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Week 3 Stuff</title>
         <meta charset="utf-8">
-        <link href="../styles/mystyle.css" rel="stylesheet">
+        <link href="example-style-sheet.css" rel="stylesheet">
     </head>
     
     <body>
